# gcc-pretty-print

./: FuncDef.hs  Makefile  README.md  eg.txt  gcc-pretty-print.cabal  simple.txt  type.txt
